# nanostores.rs

./: .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
crates/nanostores/: Cargo.toml
crates/nanostores-macros/: Cargo.toml
crates/nanostores-macros/src/: lib.rs
crates/nanostores-macros/tests/: derive.rs
crates/nanostores-macros/tests/ui/: nanomap_pass.rs  nanomap_setter_collision.rs  nanomap_setter_collision.stderr
crates/nanostores-wasm/: Cargo.toml  run-browser-tests.sh
crates/nanostores-wasm/src/: lib.rs
crates/nanostores-wasm/tests/: bridge.rs
crates/nanostores/src/: any.rs  atom.rs  collection.rs  computed.rs  error.rs  lib.rs  lifecycle.rs  map.rs  scheduler.rs  store.rs  subscription.rs
crates/nanostores/tests/: core.rs
docs/superpowers/specs/: 2026-07-08-nanostores-rs-design.md
examples/browser-app/: README.md
examples/browser-app/core/: Cargo.toml
examples/browser-app/core/src/: lib.rs
examples/browser-app/ui/: index.html  package.json  tsconfig.json
examples/browser-app/ui/src/: main.tsx  styles.css
